added main  in index.html file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>user_friendly_feedback_form</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Margarine&family=Parkinsans:wght@300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Revolution&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <!-- Prompt 17  –  13/12//24
+    Daily Promts:
+
+    Create a user-friendly feedback form with CSS error handling and hints
+ -->
+    <main>
+        <div class="box">
+            <h3>Feedback Form</h3>
+            <form action="">
+                <p>Name</p> <i class="ri-user-line"></i> <br>
+                <input type="text" placeholder="Enter your fullname"> <br>
+                <p>Email</p> <i class="ri-mail-line"></i> <br>
+                <input type="email" placeholder="Enter your email"> <br>
+                <p>Phone No.</p> <i class="fa-solid fa-phone">
+                </i> <br> <input type="number" placeholder="Enter your phne number"> <br>
+                <p>Feedback</p> <i class="ri-feedback-line"></i> <br>
+                <TExtarea placeholder="Write something..."></TExtarea>
+                <h4>RATE OUR SERVICES <br> <i class="ri-star-fill"></i> <i class="ri-star-fill"></i> <i
+                        class="ri-star-fill"></i> <i class="ri-star-fill"></i> <i class="ri-star-fill"></i> </P>
+                    <button>Submit your feedback</button>
+            </form>
+
+        </div>
+    </main>
 </body>
+
 </html>
